--- a/app/src/main/res/drawable/tab_button_selected.xml
+++ b/app/src/main/res/drawable/tab_button_selected.xml
@@ -5,12 +5,12 @@
         <shape
             android:dither="true"
             android:shape="rectangle">
-            <solid android:color="@color/holo_blue_dark" />
+            <solid android:color="@color/holo_blue_light" />
 
         </shape>
     </item>
-    <item android:bottom="5dip">
-        <shape
+    <item android:bottom="2.5dip">
+    <shape
             android:dither="true"
             android:shape="rectangle">
             <solid android:color="@color/holo_red_light" />
