--- a/app/src/main/res/drawable/new_record.xml
+++ b/app/src/main/res/drawable/new_record.xml
@@ -6,10 +6,12 @@
             android:dither="true"
             android:shape="rectangle">
             <corners android:radius="2.0dip" />
-            <solid android:color="#44444444" />
+            <solid android:color="#777777" />
             <padding
-                android:bottom="2dip"
-                android:right="1.5dip" />
+                android:bottom="5dip"
+                android:left="5dip"
+                android:right="5dip"
+                android:top="5dip" />
         </shape>
     </item>
     <item>
@@ -17,9 +19,7 @@
             android:dither="true"
             android:shape="rectangle">
             <corners android:radius="2.0dip" />
-
-            <solid android:color="@color/holo_red_light" />
+            <solid android:color="#f2f2f2" />
         </shape>
     </item>
-
 </layer-list>
