--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,10 +45,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/header_height">
 
-        <com.flavienlaurent.notboringactionbar.KenBurnsSupportView
+        <ImageView
             android:id="@+id/header_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:src="@drawable/gradient_background"
             android:layout_marginBottom="10dip" />
 
 
@@ -117,7 +118,6 @@
                     android:background="@drawable/blood_avatar"
                     android:gravity="center"
                     android:text="A+"
-
                     app:font="MuseoSansRounded-700.otf" />
             </LinearLayout>
 
