--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@id/profile_details_holder"
     android:layout_width="match_parent"
+
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -13,18 +14,6 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <com.widget.CustomTextView
-            android:id="@id/profile_details"
-            style="@style/ActionBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:clickable="false"
-            android:gravity="left|center"
-            android:text="@string/profile_details"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:font="MuseoSansRounded-700.otf" />
 
         <ImageButton
             android:id="@id/profile_edit"
@@ -37,8 +26,7 @@
             android:gravity="right|center"
             android:textSize="22sp"
             android:textStyle="bold"
-            android:background="@drawable/ic_create_grey600_36dp"
-            app:font="MuseoSansRounded-700.otf" />
+            android:background="@drawable/ic_create_grey600_36dp" />
     </RelativeLayout>
 
     <LinearLayout
@@ -56,6 +44,8 @@
             android:layout_height="wrap_content"
             android:text="@string/total_donation"
             android:textSize="22sp"
+            android:layout_marginTop="2.5dip"
+            android:layout_marginBottom="2.5dip"
             android:textStyle="bold"
             app:font="MuseoSansRounded-700.otf" />
 
@@ -70,7 +60,7 @@
             android:textSize="18sp"
             app:font="MuseoSansRounded-300.otf" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
 
 
 
