--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,6 +87,10 @@
 
     </style>
 
+    <style name="ThemeSettings" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/holo_red_light</item>
+    </style>
+
     <style name="ThemeFeedback" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/holo_red_light</item>
     </style>
