--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,6 +91,10 @@
         <item name="colorPrimary">@color/holo_red_light</item>
     </style>
 
+    <style name="ThemeAbout" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/holo_red_light</item>
+    </style>
+
     <style name="ThemeFeedback" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/holo_red_light</item>
     </style>
