--- a/app/src/main/res/layout/about_list.xml
+++ b/app/src/main/res/layout/about_list.xml
@@ -8,8 +8,8 @@
         android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:divider="#555555"
-        android:dividerHeight="1.5dip"
+        android:divider="@drawable/about_list_divider"
+        android:dividerHeight="0.5dip"
         android:scrollbars="none" />
 
     <WebView
