--- a/app/src/main/res/layout/about_list_item.xml
+++ b/app/src/main/res/layout/about_list_item.xml
@@ -2,25 +2,31 @@
 <LinearLayout
     android:id="@+id/about_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dip"
+    android:layout_margin="5dip"
     android:orientation="vertical">
 
     <com.widget.CustomTextView
         android:id="@+id/about_header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dip"
-        android:text="dummy"
-        android:textSize="32sp" />
+        android:layout_margin="10dip"
+        android:textColor="@color/holo_red_light"
+        android:text="@string/dummy_name"
+        app:font="MuseoSansRounded-700.otf"
+        android:textSize="18sp" />
 
     <com.widget.CustomTextView
         android:id="@+id/about_body"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dip"
-        android:text="dummy"
-        android:textSize="22sp" />
-
+        android:layout_marginBottom="10dip"
+        android:layout_marginLeft="10dip"
+        android:layout_marginStart="10dip"
+        android:textColor="#333333"
+        app:font="MuseoSansRounded-300.otf"
+        android:text="@string/dummy_name"
+        android:textSize="15sp" />
 </LinearLayout>
