--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -20,9 +20,11 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_centerHorizontal="true"
+                android:layout_margin="10dip"
                 android:layout_centerVertical="true"
+                android:tint="#dddddd"
                 android:layout_height="wrap_content"
                 android:src="@drawable/log_in_screen_logo" />
         </RelativeLayout>
@@ -37,9 +39,24 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center"
+                android:textColor="#dddddd"
                 android:text="12-12-12"
-                android:textSize="20dip"
+                android:textSize="25dip"
                 app:font="Roboto-Light.ttf" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <ImageButton
+        android:id="@id/option_button_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingEnd="5dip"
+        android:paddingRight="5dip"
+        android:paddingTop="5dip"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="#00000000"
+        android:contentDescription="@null"
+        android:src="@drawable/feed_item_popup" />
+</RelativeLayout>
