--- a/app/src/main/res/values-bn/arrays.xml
+++ b/app/src/main/res/values-bn/arrays.xml
@@ -11,4 +11,20 @@
         <item>আমাদের সম্পর্কে</item>
     </string-array>
 
+    <string-array name="about_list_header">
+        <item>ডোনেট লাইফ</item>
+        <item>সেবার নিয়মাবলী</item>
+        <item>গোপনীয়তা সত্ত্ব</item>
+        <item>ব্যবহার সত্ত্ব</item>
+        <item>ওপেন সোর্স লাইন্সেস</item>
+        <item>ডেভেলোপারদের সম্পর্কে</item>
+    </string-array>
+    <string-array name="about_list_body">
+        <item>ভার্সন ১.১.১ | নির্মান ২০১৪১১২৮</item>
+        <item></item>
+        <item></item>
+        <item>ডোনেট লাইফ কেবল পার্সোনাল এবং নন-কমার্সিয়াল ব্যবহারের জন্যে।</item>
+        <item>লাইসেন্সের লিগ্যাল তথ্য</item>
+        <item>নাম এবং যোগাযোগ</item>
+    </string-array>
 </resources>
