--- a/app/src/main/res/layout/about_list.xml
+++ b/app/src/main/res/layout/about_list.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e5e5e5"
     android:orientation="vertical">
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
