--- a/app/src/main/res/layout/about_list_item.xml
+++ b/app/src/main/res/layout/about_list_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#e5e5e5"
     android:layout_margin="5dip"
     android:orientation="vertical">
 
