--- a/app/src/main/res/layout/version_info.xml
+++ b/app/src/main/res/layout/version_info.xml
@@ -35,12 +35,14 @@
                     app:font="MuseoSansRounded-700.otf"
                     android:layout_marginTop="15dip"
                     android:text="@string/app_name"
+                    android:textColor="#e5e5e5"
                     android:textSize="26sp" />
 
                 <com.widget.CustomTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dip"
+                    android:textColor="#c5c5c5"
                     app:font="MuseoSansRounded-300.otf"
                     android:text="@string/app_version_code"
                     android:textSize="15sp" />
@@ -51,6 +53,8 @@
             android:layout_marginTop="15dip"
             android:layout_width="fill_parent"
             android:gravity="center"
+            android:textColor="#c5c5c5"
+            app:font="MuseoSansRounded-300.otf"
             android:layout_marginBottom="15dip"
             android:text="@string/app_copyright"
             android:layout_height="wrap_content" />
