--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -22,7 +22,7 @@
             android:key="pref_filter_notification"
             android:summary="@string/pref_notification_receive_filter"
             android:title="@string/pref_title_notification_receive_filter"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
         <RingtonePreference
             android:key="pref_filter_ringtone"
             android:summary="@string/pref_notification_ringtone"
@@ -34,6 +34,6 @@
             android:dependency="pref_filter_notification"
             android:summary="@string/pref_notification_vibration"
             android:title="@string/pref_title_notification_vibration"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
