--- a/app/src/main/res/drawable/new_record.xml
+++ b/app/src/main/res/drawable/new_record.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <shape
-            android:dither="true"
-            android:shape="rectangle">
-            <corners android:radius="2.0dip" />
-            <solid android:color="#777777" />
-            <padding
-                android:bottom="5dip"
-                android:left="5dip"
-                android:right="5dip"
-                android:top="5dip" />
-        </shape>
-    </item>
-    <item>
-        <shape
-            android:dither="true"
-            android:shape="rectangle">
-            <corners android:radius="2.0dip" />
-            <solid android:color="#f2f2f2" />
-        </shape>
-    </item>
-</layer-list>
+    <item android:drawable="@drawable/new_record_default" android:state_enabled="false" />
+    <item android:drawable="@drawable/new_record_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/new_record_pressed" android:state_hovered="true" />
+    <item android:drawable="@drawable/new_record_pressed" android:state_focused="true" />
+    <item android:drawable="@drawable/new_record_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/new_record_default" />
+
+</selector>
