--- a/app/src/main/res/layout/grid_item_add.xml
+++ b/app/src/main/res/layout/grid_item_add.xml
@@ -23,7 +23,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_circle_outline_grey600_48dp" />
+                android:src="@drawable/add" />
         </RelativeLayout>
 
     </LinearLayout>
