--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,41 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-
-
-
-
-
-
-
-
-
-
-
-
-
-    -->
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.-->
 
     <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-
-
-
-
-
-
-
-
-
-
-
-
-
-        -->
+            backward-compatibility can go here.-->
     </style>
 
     <!-- Application theme. -->
@@ -61,6 +33,11 @@
         <item name="font">MuseoSansRounded-700.otf</item>
     </style>
 
+    <style name="CustomDialogTheme" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="@android:background">@color/holo_gray_light</item>
+        <item name="@android:textColor">#FAF5F7</item>
+    </style>
+
     <style name="ThemeFeed" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/holo_red_light</item>
         <item name="colorPrimaryDark">@null</item>
@@ -71,11 +48,11 @@
         <item name="colorAccent">@null</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBarOverlay">true</item>
-
     </style>
 
     <style name="ThemeReg" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/holo_red_dark</item>
+
         <item name="colorPrimaryDark">@null</item>
         <item name="actionBarDivider">@null</item>
         <item name="elevation">0dip</item>
