--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -6,57 +6,85 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/grid_background"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="2.5dip"
         android:background="@drawable/red_panel"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dip"
             android:layout_gravity="center"
+            android:layout_margin="5dip"
             android:layout_weight="1">
 
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="10dip"
-                android:layout_centerVertical="true"
-                android:tint="#dddddd"
-                android:layout_height="wrap_content"
-                android:src="@drawable/log_in_screen_logo" />
-        </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/blood_dummy_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dip">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:tint="#dddddd"
+                    android:padding="0dip"
+                    android:src="@drawable/log_in_screen_logo" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/add_dummy_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:layout_margin="5dip">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:padding="0dip"
+                    android:src="@drawable/add" />
+            </RelativeLayout>
+        </FrameLayout>
 
         <LinearLayout
+            android:id="@+id/record_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dip"
             android:layout_weight="1">
 
             <com.widget.CustomTextView
+                android:id="@+id/donation_date"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center"
-                android:textColor="#dddddd"
                 android:text="12-12-12"
+                android:textColor="#dddddd"
                 android:textSize="25dip"
                 app:font="Roboto-Light.ttf" />
         </LinearLayout>
     </LinearLayout>
 
     <ImageButton
-        android:id="@id/option_button_1"
+        android:id="@+id/option_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="5dip"
-        android:paddingRight="5dip"
-        android:paddingTop="5dip"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="#00000000"
         android:contentDescription="@null"
+        android:paddingEnd="5dip"
+        android:paddingRight="5dip"
+        android:paddingTop="5dip"
         android:src="@drawable/feed_item_popup" />
 </RelativeLayout>
