--- a/app/src/main/res/layout/grid_item_details.xml
+++ b/app/src/main/res/layout/grid_item_details.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/grid_background"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="2.5dip"
         android:background="@drawable/red_panel"
         android:orientation="vertical">
@@ -36,23 +36,6 @@
                     android:padding="0dip"
                     android:src="@drawable/log_in_screen_logo" />
             </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/add_dummy_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                android:layout_margin="5dip">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:padding="0dip"
-                    android:src="@drawable/add" />
-            </RelativeLayout>
         </FrameLayout>
 
         <LinearLayout
@@ -72,19 +55,22 @@
                 android:textSize="22dip"
                 app:font="Roboto-Light.ttf" />
         </LinearLayout>
-    </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/option_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="#00000000"
-        android:contentDescription="@null"
-        android:paddingEnd="5dip"
-        android:paddingRight="5dip"
-        android:paddingTop="5dip"
-        android:src="@drawable/feed_item_popup" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dip"
+            android:layout_weight="1">
+
+            <com.widget.CustomTextView
+                android:id="@+id/donation_details"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:text="12-12-12"
+                android:textColor="#dddddd"
+                android:textSize="22dip"
+                app:font="Roboto-Light.ttf" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
