--- a/app/src/main/res/drawable/red_panel.xml
+++ b/app/src/main/res/drawable/red_panel.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <shape
-            android:dither="true"
-            android:shape="rectangle">
-            <corners android:radius="2.0dip" />
-            <solid android:color="#44444444" />
-            <padding
-                android:bottom="2dip"
-                android:right="1.5dip" />
-        </shape>
-    </item>
-    <item>
-        <shape
-            android:dither="true"
-            android:shape="rectangle">
-            <corners android:radius="2.0dip" />
+    <item android:drawable="@drawable/red_panel_default" android:state_enabled="false" />
+    <item android:drawable="@drawable/red_panel_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/red_panel_pressed" android:state_hovered="true" />
+    <item android:drawable="@drawable/red_panel_pressed" android:state_focused="true" />
+    <item android:drawable="@drawable/red_panel_pressed" android:state_selected="true" />
+    <item android:drawable="@drawable/red_panel_default" />
 
-            <solid android:color="@color/holo_red_light" />
-        </shape>
-    </item>
-
-</layer-list>
+</selector>
