--- a/app/src/main/res/layout/version_info.xml
+++ b/app/src/main/res/layout/version_info.xml
@@ -4,12 +4,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center"
+    android:background="@drawable/version_background"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/version_background"
         android:layout_gravity="center">
 
         <LinearLayout
