--- a/app/src/main/res/xml-v11/settings.xml
+++ b/app/src/main/res/xml-v11/settings.xml
@@ -30,18 +30,19 @@
             android:key="pref_filter_notification"
             android:summary="@string/pref_notification_receive_filter"
             android:title="@string/pref_title_notification_receive_filter"
-            android:defaultValue="false" />
-        <RingtonePreference
+            android:defaultValue="true" />
+        <com.project.bluepandora.donatelife.preferences.NotificationSoundPreference
             android:key="pref_filter_ringtone"
             android:summary="@string/pref_notification_ringtone"
             android:dependency="pref_filter_notification"
             android:title="@string/pref_title_notification_ringtone"
+            android:defaultValue="content://settings/system/notification_sound"
             android:showDefault="true" />
         <CheckBoxPreference
             android:key="pref_filter_vibration"
             android:dependency="pref_filter_notification"
             android:summary="@string/pref_notification_vibration"
             android:title="@string/pref_title_notification_vibration"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
