--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -13,6 +13,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
+        android:background="@android:color/transparent"
         android:layout_marginTop="6.0dip"
         android:gravity="center"
         android:orientation="vertical">
@@ -22,6 +23,7 @@
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:layout_marginBottom="16.0dip"
+            android:contentDescription="@null"
             android:src="@drawable/log_in_screen_logo" />
 
         <LinearLayout
@@ -33,7 +35,7 @@
             android:orientation="vertical">
 
             <Spinner
-                android:id="@+id/registration_country"
+                android:id="@+id/country_name_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -56,7 +58,7 @@
             android:orientation="horizontal">
 
             <com.widget.CustomTextView
-                android:id="@+id/plus"
+                android:id="@+id/plus_sign"
                 style="@style/MuseoSansRounded_300_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,20 +68,22 @@
                 android:textSize="20.0sp" />
 
             <com.widget.CustomTextView
-                android:id="@+id/registration_cc"
+                android:id="@id/country_code"
                 style="@style/MuseoSansRounded_300_text"
                 android:layout_width="wrap_content"
-                android:layout_toRightOf="@+id/plus"
+                android:layout_toRightOf="@+id/plus_sign"
+                android:layout_toEndOf="@+id/plus_sign"
                 android:layout_marginTop="4dip"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dip"
+                android:layout_marginStart="5dip"
                 android:clickable="true"
                 android:singleLine="true"
                 android:textColor="#ff000000"
                 android:textSize="20sp" />
 
             <com.widget.CustomEditText
-                android:id="@+id/registration_phone"
+                android:id="@+id/mobile_number"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -121,7 +125,7 @@
                 android:textStyle="bold" />
 
             <com.widget.CustomEditText
-                android:id="@+id/check_reg_pass"
+                android:id="@+id/password"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
@@ -142,7 +146,7 @@
         </RelativeLayout>
 
         <com.widget.CustomButton
-            android:id="@+id/registration_submit"
+            android:id="@+id/sign_in_button"
             style="@style/MuseoSansRounded_700_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -155,7 +159,7 @@
             android:textSize="20.0sp" />
 
         <com.widget.CustomButton
-            android:id="@+id/signup"
+            android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
