--- a/app/src/main/res/values-bn/plurals.xml
+++ b/app/src/main/res/values-bn/plurals.xml
@@ -2,8 +2,18 @@
 <resources>
 
     <plurals name="bags">
+        <item quantity="zero"> </item>
         <item quantity="one">(%d ব্যাগ)</item>
         <item quantity="other">(%d ব্যাগ)</item>
     </plurals>
+    <plurals name="donation">
+        <item quantity="zero">কোনো ডোনেশন রেকর্ড পাওয়া যায় নি</item>
+        <item quantity="one">%d বার</item>
+        <item quantity="other">%d বার</item>
+    </plurals>
 
+    <plurals name="numbers">
+        <item quantity="one">%dটি ফিড</item>
+        <item quantity="other">%dগুলো ফিড</item>
+    </plurals>
 </resources>
