--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -13,7 +13,6 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:background="@android:color/transparent"
         android:layout_marginTop="6.0dip"
         android:gravity="center"
         android:orientation="vertical">
@@ -23,7 +22,6 @@
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:layout_marginBottom="16.0dip"
-            android:contentDescription="@null"
             android:src="@drawable/log_in_screen_logo" />
 
         <LinearLayout
@@ -35,7 +33,7 @@
             android:orientation="vertical">
 
             <Spinner
-                android:id="@+id/country_name_spinner"
+                android:id="@+id/registration_country"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -58,7 +56,7 @@
             android:orientation="horizontal">
 
             <com.widget.CustomTextView
-                android:id="@+id/plus_sign"
+                android:id="@+id/plus"
                 style="@style/MuseoSansRounded_300_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -68,22 +66,20 @@
                 android:textSize="20.0sp" />
 
             <com.widget.CustomTextView
-                android:id="@id/country_code"
+                android:id="@+id/registration_cc"
                 style="@style/MuseoSansRounded_300_text"
                 android:layout_width="wrap_content"
-                android:layout_toRightOf="@+id/plus_sign"
-                android:layout_toEndOf="@+id/plus_sign"
+                android:layout_toRightOf="@+id/plus"
                 android:layout_marginTop="4dip"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dip"
-                android:layout_marginStart="5dip"
                 android:clickable="true"
                 android:singleLine="true"
                 android:textColor="#ff000000"
                 android:textSize="20sp" />
 
             <com.widget.CustomEditText
-                android:id="@+id/mobile_number"
+                android:id="@+id/registration_phone"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -125,7 +121,7 @@
                 android:textStyle="bold" />
 
             <com.widget.CustomEditText
-                android:id="@+id/password"
+                android:id="@+id/check_reg_pass"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
@@ -146,7 +142,7 @@
         </RelativeLayout>
 
         <com.widget.CustomButton
-            android:id="@+id/sign_in_button"
+            android:id="@+id/registration_submit"
             style="@style/MuseoSansRounded_700_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -159,7 +155,7 @@
             android:textSize="20.0sp" />
 
         <com.widget.CustomButton
-            android:id="@+id/sign_up_button"
+            android:id="@+id/signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
