--- a/app/src/main/res/layout/fragment_nameverification.xml
+++ b/app/src/main/res/layout/fragment_nameverification.xml
@@ -27,7 +27,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/register_password_confirm"
+                android:text="@string/register_name_confirm"
                 android:textColor="#111111"
                 android:textSize="20sp" />
 
@@ -40,19 +40,20 @@
                 android:layout_marginRight="12.0dip"
                 android:layout_marginTop="16.0dip"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <com.widget.CustomEditText
                     android:id="@+id/registration_first_name"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:hint="@string/register_name_first"
                     android:imeOptions="actionDone"
                     android:paddingEnd="0.0sp"
                     android:paddingLeft="10.0sp"
                     android:paddingRight="0.0sp"
-                    android:paddingStart="60.0sp"
+                    android:paddingStart="10.0sp"
                     android:selectAllOnFocus="true"
                     android:singleLine="true"
                     android:textColor="#ff000000"
@@ -64,14 +65,14 @@
                     android:id="@+id/registration_last_name"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dip"
+                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:hint="@string/register_name_last"
                     android:imeOptions="actionDone"
                     android:paddingEnd="0.0sp"
                     android:paddingLeft="10.0sp"
                     android:paddingRight="0.0sp"
-                    android:paddingStart="60.0sp"
+                    android:paddingStart="10.0sp"
                     android:selectAllOnFocus="true"
                     android:singleLine="true"
                     android:textColor="#ff000000"
@@ -89,7 +90,7 @@
                 android:layout_marginLeft="50dip"
                 android:layout_marginRight="50dip"
                 android:layout_marginTop="20dip"
-                android:background="@drawable/btn_blue_holo"
+                android:background="@drawable/white_holo_button"
                 android:minHeight="0.0dip"
                 android:padding="5dip"
                 android:text="@string/confirm"
