--- a/app/src/main/res/layout/fragment_passwordverification.xml
+++ b/app/src/main/res/layout/fragment_passwordverification.xml
@@ -94,7 +94,7 @@
                 android:layout_marginRight="50dip"
                 android:textColor="@color/holo_blue_dark"
                 android:layout_marginTop="20dip"
-                android:background="@drawable/btn_blue_holo"
+                android:background="@drawable/white_holo_button"
                 android:minHeight="0.0dip"
                 android:padding="5dip"
                 android:text="@string/confirm"
