--- a/app/src/main/res/drawable/btn_holo_text.xml
+++ b/app/src/main/res/drawable/btn_holo_text.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/holo_blue_light" android:state_enabled="false" />
-    <item android:color="@color/holo_blue_dark" android:state_pressed="true" />
-    <item android:color="@color/holo_blue_dark" android:state_hovered="true" />
-    <item android:color="@color/holo_blue_dark" android:state_focused="true" />
-    <item android:color="@color/holo_blue_dark" android:state_selected="true" />
-    <item android:color="@color/holo_blue_light" />
+    <item android:color="@color/holo_red_light" android:state_enabled="false" />
+    <item android:color="@color/holo_red_dark" android:state_pressed="true" />
+    <item android:color="@color/holo_red_dark" android:state_hovered="true" />
+    <item android:color="@color/holo_red_dark" android:state_focused="true" />
+    <item android:color="@color/holo_red_dark" android:state_selected="true" />
+    <item android:color="@color/holo_red_light" />
 </selector>
