--- a/app/src/main/res/layout/about_list.xml
+++ b/app/src/main/res/layout/about_list.xml
@@ -17,5 +17,5 @@
         android:id="@+id/license_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"></WebView>
+        android:visibility="gone" />
 </FrameLayout>
