--- a/app/src/main/res/layout/card_feed_view.xml
+++ b/app/src/main/res/layout/card_feed_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#e5e5e5" >
+    android:background="#e5e5e5">
 
     <LinearLayout
         android:id="@id/feed_item_holder"
@@ -14,22 +13,22 @@
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
         android:paddingTop="5dip"
-        android:tag="feed_item_holder" >
+        android:tag="feed_item_holder">
 
         <LinearLayout
             android:id="@id/feed_item_holder_background"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/card_view_background"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@id/bloodGroup_holder"
-                android:layout_width="105dip"
-                android:layout_height="105dip"
+                android:layout_width="@dimen/card_view_blood_width"
+                android:layout_height="@dimen/card_view_blood_height"
                 android:background="@drawable/emergency_textview_background"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <com.widget.CustomTextView
                     android:id="@id/bloodGroupID_text_view"
@@ -56,7 +55,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@android:color/transparent"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@id/info_holder"
@@ -64,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
                     android:layout_marginStart="10dip"
-                    android:background="@android:color/transparent" >
+                    android:background="@android:color/transparent">
 
                     <RelativeLayout
                         android:id="@id/info"
@@ -72,7 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|top"
                         android:background="@android:color/transparent"
-                        android:orientation="vertical" >
+                        android:orientation="vertical">
 
                         <com.widget.CustomTextView
                             android:id="@id/emergency_text_view"
@@ -121,7 +120,7 @@
                     android:layout_marginLeft="10dip"
                     android:layout_marginStart="10dip"
                     android:background="@android:color/transparent"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:id="@id/hospital_name_holder"
@@ -130,7 +129,7 @@
                         android:background="@android:color/transparent"
                         android:gravity="center|start"
                         android:orientation="horizontal"
-                        android:paddingTop="5dip" >
+                        android:paddingTop="5dip">
 
                         <com.widget.CustomTextView
                             android:id="@id/hospitalNameID_text_view"
@@ -156,12 +155,12 @@
                         android:layout_marginTop="5dip"
                         android:background="@android:color/transparent"
                         android:gravity="center|start"
-                        android:orientation="horizontal" >
+                        android:orientation="horizontal">
 
                         <com.widget.CustomTextView
-                            android:id="@id/mobileNumberID_text_view"
+                            android:id="@+id/mobileNumberID_text_view"
                             style="@style/MuseoSansRounded_300_text"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
