--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -11,7 +11,7 @@
         android:paddingTop="@dimen/abc_action_bar_default_height_material">
 
         <ProgressBar
-            android:id="@+id/progressBar2"
+            android:id="@+id/progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <ImageButton
-            android:id="@+id/imageButton1"
+            android:id="@+id/action_button"
             android:layout_width="70dip"
             android:layout_height="70dip"
             android:layout_alignParentBottom="true"
