--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="header_height">310dip</dimen>
     <dimen name="footer_height">60dip</dimen>
     <dimen name="min_header_height">250dp</dimen>
+    <dimen name="card_view_blood_width">105dip</dimen>
+    <dimen name="card_view_blood_height">105dip</dimen>
     <dimen name="header_logo_size">120dp</dimen>
 
 </resources>
