--- a/app/src/main/res/layout-v14/fragment_request.xml
+++ b/app/src/main/res/layout-v14/fragment_request.xml
@@ -244,7 +244,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dip"
                 android:background="@drawable/btn_blue"
-                android:text="@string/request"
+                android:text="@string/request_server"
                 android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
