--- a/app/src/main/res/xml-v11/settings.xml
+++ b/app/src/main/res/xml-v11/settings.xml
@@ -2,6 +2,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory
+        android:title="@string/pref_language"
+        android:key="pref_key_language">
+        <com.project.bluepandora.donatelife.preferences.CustomSwitchPreference
+            android:key="pref_app_language"
+            android:summary="@string/pref_summary_app_language"
+            android:title="@string/pref_title_app_language"
+            android:defaultValue="false" />
+    </PreferenceCategory>
+    <PreferenceCategory
         android:title="@string/pref_request_feed"
         android:key="pref_key_feed_settings">
         <com.project.bluepandora.donatelife.preferences.NumberPickerPreference
